Add imap --build-all

--- a/.github/scripts/8.1
+++ b/.github/scripts/8.1
@@ -40,6 +40,8 @@ configure_option "--enable-ftp"
 configure_option "--with-pspell=/usr"
 configure_option "--with-enchant=/usr"
 configure_option "--with-kerberos"
+configure_option "--with-imap-ssl=yes"
+configure_option "--with-imap=shared"
 configure_option "--enable-sysvmsg"
 configure_option "--with-ffi"
 configure_option "--enable-zend-test=shared"
