Add php-fpm config --build-all

--- a/.github/scripts/8.1
+++ b/.github/scripts/8.1
@@ -1,5 +1,7 @@
 configure_option "--enable-phpdbg"
 configure_option "--enable-fpm"
+configure_option "--with-fpm-user=www-data"
+configure_option "--with-fpm-group=www-data"
 configure_option "--with-pdo-mysql=mysqlnd"
 configure_option "--with-mysqli=mysqlnd"
 configure_option "--with-pgsql"
