Add support for apache2 --build-all

--- a/.github/scripts/8.1
+++ b/.github/scripts/8.1
@@ -2,6 +2,7 @@ configure_option "--enable-phpdbg"
 configure_option "--enable-fpm"
 configure_option "--with-fpm-user=www-data"
 configure_option "--with-fpm-group=www-data"
+configure_option "--with-apxs2" "/usr/bin/apxs2"
 configure_option "--with-pdo-mysql=mysqlnd"
 configure_option "--with-mysqli=mysqlnd"
 configure_option "--with-pgsql"
@@ -51,6 +52,7 @@ configure_option "--enable-werror"
 configure_option "--without-pear"
 configure_option "--disable-debug"
 configure_option "--enable-opcache"
+configure_option "--sysconfdir=PREFIX/etc"
 
 configure_option -D "--with-xmlrpc"
 
