Add support for ldap --build-all

--- a/.github/scripts/8.1
+++ b/.github/scripts/8.1
@@ -45,6 +45,8 @@ configure_option "--with-enchant=/usr"
 configure_option "--with-kerberos"
 configure_option "--with-imap-ssl=yes"
 configure_option "--with-imap=shared"
+configure_option "--with-ldap=/usr"
+configure_option "--with-ldap-sasl"
 configure_option "--enable-sysvmsg"
 configure_option "--with-ffi"
 configure_option "--enable-zend-test=shared"
