--- a/config/definitions/8.1
+++ b/config/definitions/8.1
@@ -4,7 +4,7 @@ configure_option "--with-mysqli=mysqlnd"
 configure_option "--with-pgsql"
 configure_option "--with-pdo-pgsql"
 configure_option "--with-pdo-sqlite"
-configure_option "--enable-intl"
+configure_option "--enable-intl=shared"
 configure_option "--without-pear"
 configure_option "--enable-gd"
 configure_option "--with-jpeg"
