Change sqlsrv branch to dev for PHP 8.1

--- a/config/extensions/8.1
+++ b/config/extensions/8.1
@@ -3,8 +3,8 @@ pecl igbinary extension
 pecl memcache extension
 pecl msgpack extension
 pecl pcov extension
-git sqlsrv extension https://github.com/microsoft/msphpsql PHP-8.1-dev
-git pdo_sqlsrv extension https://github.com/microsoft/msphpsql PHP-8.1-dev
+git sqlsrv extension https://github.com/microsoft/msphpsql dev
+git pdo_sqlsrv extension https://github.com/microsoft/msphpsql dev
 git xdebug zend_extension https://github.com/xdebug/xdebug master
 git apcu extension https://github.com/shivammathur/apcu fix-zend-atoi
 git imagick extension https://github.com/Imagick/imagick master
