Build memcached with igbinary, json and msgpack support --build-all

--- a/config/extensions/8.1
+++ b/config/extensions/8.1
@@ -9,5 +9,5 @@ git pdo_sqlsrv https://github.com/microsoft/msphpsql dev
 git xdebug https://github.com/xdebug/xdebug master
 git apcu https://github.com/shivammathur/apcu fix-zend-atoi
 git imagick https://github.com/Imagick/imagick master
-git memcached https://github.com/php-memcached-dev/php-memcached master
+git memcached https://github.com/php-memcached-dev/php-memcached master --enable-memcached --enable-memcached-igbinary --enable-memcached-json --enable-memcached-msgpack
 git redis https://github.com/phpredis/phpredis develop --enable-redis --enable-redis-igbinary --enable-redis-msgpack --enable-redis-zstd --enable-redis-lz4 --with-libzstd=/usr --with-liblz4=/usr
