--- a/config/extensions/8.1
+++ b/config/extensions/8.1
@@ -3,6 +3,7 @@ pecl apcu
 pecl ast
 pecl igbinary
 pecl memcache
+pecl mongodb-1.11.0alpha1
 pecl msgpack
 pecl pcov
 git sqlsrv https://github.com/microsoft/msphpsql dev
@@ -10,4 +11,4 @@ git pdo_sqlsrv https://github.com/microsoft/msphpsql dev
 git xdebug https://github.com/xdebug/xdebug master
 git imagick https://github.com/Imagick/imagick master
 git memcached https://github.com/php-memcached-dev/php-memcached master --enable-memcached --enable-memcached-igbinary --enable-memcached-json --enable-memcached-msgpack
-git redis https://github.com/phpredis/phpredis develop --enable-redis --enable-redis-igbinary --enable-redis-msgpack --enable-redis-zstd --enable-redis-lz4 --with-libzstd=/usr --with-liblz4=/usr
+git redis https://github.com/phpredis/phpredis release/5.3.5-rc1 --enable-redis --enable-redis-igbinary --enable-redis-msgpack --enable-redis-zstd --enable-redis-lz4 --with-libzstd=/usr --with-liblz4=/usr
