Use latest version of amqp and mongodb --build-all

--- a/config/extensions/8.1
+++ b/config/extensions/8.1
@@ -1,9 +1,9 @@
-pecl amqp-1.11.0beta
+pecl amqp-1.11.0RC1
 pecl apcu
 pecl ast
 pecl igbinary
 pecl memcache
-pecl mongodb-1.11.0alpha1
+pecl mongodb
 pecl msgpack
 pecl pcov
 git sqlsrv https://github.com/microsoft/msphpsql dev
