--- a/config/extensions/8.2
+++ b/config/extensions/8.2
@@ -5,6 +5,7 @@ pecl igbinary
 pecl memcache
 pecl msgpack
 pecl pcov
+git ds https://github.com/php-ds/ext-ds master
 git sqlsrv https://github.com/microsoft/msphpsql dev
 git pdo_sqlsrv https://github.com/microsoft/msphpsql dev
 git xdebug https://github.com/xdebug/xdebug master
