Update extensions --build-all

--- a/config/extensions/8.1
+++ b/config/extensions/8.1
@@ -1,14 +1,15 @@
-pecl amqp-1.11.0RC1
+pecl amqp
 pecl apcu
 pecl ast
+pecl ds
 pecl igbinary
+pecl imagick
 pecl memcache
+pecl mongodb
 pecl msgpack
 pecl pcov
-git ds https://github.com/php-ds/ext-ds master
-git sqlsrv https://github.com/microsoft/msphpsql dev
-git pdo_sqlsrv https://github.com/microsoft/msphpsql dev
-git xdebug https://github.com/xdebug/xdebug master
-git imagick https://github.com/Imagick/imagick master
+pecl redis
+pecl sqlsrv-5.10.0beta2
+pecl pdo_sqlsrv-5.10.0beta2
+pecl xdebug
 git memcached https://github.com/php-memcached-dev/php-memcached master --enable-memcached --enable-memcached-igbinary --enable-memcached-json --enable-memcached-msgpack
-git redis https://github.com/phpredis/phpredis release/5.3.5-rc1 --enable-redis --enable-redis-igbinary --enable-redis-msgpack --enable-redis-zstd --enable-redis-lz4 --with-libzstd=/usr --with-liblz4=/usr
