--- a/config/extensions/8.2
+++ b/config/extensions/8.2
@@ -11,5 +11,5 @@ pecl pcov
 pecl redis
 pecl sqlsrv-5.10.0beta2
 pecl pdo_sqlsrv-5.10.0beta2
-git xdebug https://github.com/shivammathur/xdebug fix-jmpznz
+git xdebug https://github.com/xdebug/xdebug master
 git memcached https://github.com/php-memcached-dev/php-memcached master --enable-memcached --enable-memcached-igbinary --enable-memcached-json --enable-memcached-msgpack
