--- a/config/definitions/8.3
+++ b/config/definitions/8.3
@@ -115,7 +115,6 @@
 --program-suffix=PHP_VERSION
 --sysconfdir=/etc
 --localstatedir=/var
---disable-debug
 --disable-rpath
 --disable-static
 --with-pic
@@ -123,6 +122,9 @@
 --without-pear
 --with-external-pcre
 --with-system-tzdata
+
+# Placeholder for debug build.
+DEBUG
 
 # Placeholder for patch commands.
 PATCHES
