--- a/config/definitions/8.3
+++ b/config/definitions/8.3
@@ -126,6 +126,9 @@
 # Placeholder for debug build.
 DEBUG
 
+# Placeholder for thread-safe build.
+ZTS
+
 # Placeholder for patch commands.
 PATCHES
 
