--- a/config/extensions/8.1
+++ b/config/extensions/8.1
@@ -12,4 +12,5 @@ pecl redis
 pecl sqlsrv-5.10.0beta2
 pecl pdo_sqlsrv-5.10.0beta2
 pecl xdebug
+pecl yaml
 git memcached https://github.com/php-memcached-dev/php-memcached master --enable-memcached --enable-memcached-igbinary --enable-memcached-json --enable-memcached-msgpack
