--- a/config/extensions/8.3
+++ b/config/extensions/8.3
@@ -11,5 +11,6 @@ pecl pcov
 pecl redis
 pecl sqlsrv-5.10.0beta2
 pecl pdo_sqlsrv-5.10.0beta2
+pecl yaml
 git xdebug https://github.com/xdebug/xdebug master
 git memcached https://github.com/php-memcached-dev/php-memcached master --enable-memcached --enable-memcached-igbinary --enable-memcached-json --enable-memcached-msgpack
