Fix sqlite support in PHP 7.3 and older

--- a/config/definitions/7.2
+++ b/config/definitions/7.2
@@ -98,8 +98,8 @@
 --with-password-argon2=/usr
 
 # sqlite
---with-sqlite3=shared
---with-pdo-sqlite=shared
+--with-sqlite3=shared,/usr
+--with-pdo-sqlite=shared,/usr
 
 # xml
 --enable-dom=shared
