--- a/config/definitions/7.3
+++ b/config/definitions/7.3
@@ -98,8 +98,8 @@
 --with-password-argon2=/usr
 
 # sqlite
---with-sqlite3=shared
---with-pdo-sqlite=shared
+--with-sqlite3=shared,/usr
+--with-pdo-sqlite=shared,/usr
 
 # xml
 --enable-dom=shared
