Set sqlsrv version to stable

--- a/config/extensions/8.2
+++ b/config/extensions/8.2
@@ -9,8 +9,8 @@ pecl mongodb
 pecl msgpack
 pecl pcov
 pecl redis
-pecl sqlsrv-5.10.0beta2
-pecl pdo_sqlsrv-5.10.0beta2
+pecl sqlsrv
+pecl pdo_sqlsrv
 pecl yaml
 git xdebug https://github.com/xdebug/xdebug master
 git memcached https://github.com/php-memcached-dev/php-memcached master --enable-memcached --enable-memcached-igbinary --enable-memcached-json --enable-memcached-msgpack
