--- a/config/extensions/8.2
+++ b/config/extensions/8.2
@@ -12,5 +12,5 @@ pecl redis
 pecl sqlsrv
 pecl pdo_sqlsrv
 pecl yaml
-git xdebug https://github.com/xdebug/xdebug master
+pecl xdebug
 git memcached https://github.com/php-memcached-dev/php-memcached master --enable-memcached --enable-memcached-igbinary --enable-memcached-json --enable-memcached-msgpack
