Add mongo extension for PHP 5.6 [skip ci]

--- a/config/extensions/5.6
+++ b/config/extensions/5.6
@@ -3,6 +3,7 @@ pecl apcu-4.0.11
 pecl igbinary-2.0.8
 pecl imagick
 pecl memcache-4.0.5.2
+pecl mongo
 pecl mongodb-1.7.5
 pecl msgpack-0.5.7
 pecl redis-4.3.0
