--- a/config/extensions/5.6
+++ b/config/extensions/5.6
@@ -2,7 +2,7 @@ pecl amqp
 pecl apcu-4.0.11
 pecl igbinary-2.0.8
 pecl imagick
-pecl memcache-3.0.8
+git memcache https://github.com/websupport-sk/pecl-memcache 4.0.3
 pecl mongo
 pecl mongodb-1.7.5
 pecl msgpack-0.5.7
