Improve extension support

--- a/config/definitions/7.4
+++ b/config/definitions/7.4
@@ -47,6 +47,9 @@
 --enable-gd=shared,/usr
 --with-external-gd
 
+# json
+--enable-json=shared
+
 # mhash
 --with-mhash=/usr
 
@@ -82,6 +85,9 @@
 --with-pgsql=shared,/usr
 --with-pdo-pgsql=shared,/usr
 
+# snmp
+--with-snmp=shared,/usr
+
 # soap
 --enable-soap=shared
 --with-libxml
@@ -100,6 +106,10 @@
 --enable-xml=shared
 --enable-xmlreader=shared
 --enable-xmlwriter=shared
+
+# xmlrpc
+--with-xmlrpc=shared,/usr
+--with-libxml-dir=/usr
 
 # opcache
 --enable-opcache
