--- a/config/extensions/7.1
+++ b/config/extensions/7.1
@@ -1,4 +1,4 @@
-pecl amqp
+pecl amqp-1.11.0
 pecl apcu
 pecl ast-1.0.16
 pecl ds-1.3.0
@@ -8,9 +8,10 @@ pecl memcache-4.0.5.2
 pecl mongodb-1.11.1
 pecl msgpack
 pecl pcov
-pecl redis
+pecl redis-5.3.7
 pecl sqlsrv-5.9.0
 pecl pdo_sqlsrv-5.9.0
 pecl xdebug-2.9.8
 pecl yaml
 pecl memcached
+git zmq https://github.com/zeromq/php-zmq master
