--- a/config/extensions/7.2
+++ b/config/extensions/7.2
@@ -1,11 +1,11 @@
-pecl amqp
+pecl amqp-1.11.0
 pecl apcu
 pecl ast
 pecl ds-1.3.0
 pecl igbinary
 pecl imagick
 pecl memcache-4.0.5.2
-pecl mongodb-1.14.2
+pecl mongodb-1.16.2
 pecl msgpack
 pecl pcov
 pecl redis
@@ -14,3 +14,4 @@ pecl pdo_sqlsrv-5.9.0
 pecl xdebug-3.1.5
 pecl yaml
 pecl memcached
+git zmq https://github.com/zeromq/php-zmq master
