--- a/config/extensions/7.4
+++ b/config/extensions/7.4
@@ -9,8 +9,9 @@ pecl mongodb
 pecl msgpack
 pecl pcov
 pecl redis
-pecl sqlsrv
-pecl pdo_sqlsrv
+pecl sqlsrv-5.10.1
+pecl pdo_sqlsrv-5.10.1
 pecl xdebug-3.1.5
 pecl yaml
 pecl memcached
+git zmq https://github.com/zeromq/php-zmq master
