--- a/config/definitions/5.6
+++ b/config/definitions/5.6
@@ -53,6 +53,9 @@
 --with-freetype-dir=/usr
 --with-webp-dir=/usr
 
+# json
+--enable-json=shared
+
 # mhash
 --with-mhash=/usr
 
@@ -88,6 +91,9 @@
 --with-pgsql=shared,/usr
 --with-pdo-pgsql=shared,/usr
 
+# snmp
+--with-snmp=shared,/usr
+
 # soap
 --enable-soap=shared
 --enable-libxml
@@ -102,6 +108,10 @@
 --enable-xml=shared
 --enable-xmlreader=shared
 --enable-xmlwriter=shared
+
+# xmlrpc
+--with-xmlrpc=shared,/usr
+--with-libxml-dir=/usr
 
 # opcache
 --enable-opcache
