--- a/config/definitions/7.3
+++ b/config/definitions/7.3
@@ -54,6 +54,9 @@
 --with-freetype-dir=/usr
 --with-webp-dir=/usr
 
+# json
+--enable-json=shared
+
 # mhash
 --with-mhash=/usr
 
@@ -89,6 +92,9 @@
 --with-pgsql=shared,/usr
 --with-pdo-pgsql=shared,/usr
 
+# snmp
+--with-snmp=shared,/usr
+
 # soap
 --enable-soap=shared
 --enable-libxml
@@ -107,6 +113,10 @@
 --enable-xml=shared
 --enable-xmlreader=shared
 --enable-xmlwriter=shared
+
+# xmlrpc
+--with-xmlrpc=shared,/usr
+--with-libxml-dir=/usr
 
 # opcache
 --enable-opcache
