--- a/config/definitions/8.4
+++ b/config/definitions/8.4
@@ -82,6 +82,9 @@
 --with-pgsql=shared,/usr
 --with-pdo-pgsql=shared,/usr
 
+# snmp
+--with-snmp=shared,/usr
+
 # soap
 --enable-soap=shared
 --with-libxml
