--- a/config/extensions/5.6
+++ b/config/extensions/5.6
@@ -1,4 +1,4 @@
-pecl amqp
+pecl amqp-1.11.0
 pecl apcu-4.0.11
 pecl igbinary-2.0.8
 pecl imagick
@@ -10,3 +10,4 @@ pecl redis-4.3.0
 pecl xdebug-2.5.5
 pecl yaml-1.3.1
 pecl memcached-2.2.0
+git zmq https://github.com/zeromq/php-zmq master
