--- a/config/extensions/7.3
+++ b/config/extensions/7.3
@@ -1,16 +1,17 @@
-pecl amqp
+pecl amqp-1.11.0
 pecl apcu
 pecl ast
 pecl ds
 pecl igbinary
 pecl imagick
 pecl memcache-4.0.5.2
-pecl mongodb
+pecl mongodb-1.16.2
 pecl msgpack
 pecl pcov
 pecl redis
-pecl sqlsrv
-pecl pdo_sqlsrv
+pecl sqlsrv-5.10.1
+pecl pdo_sqlsrv-5.10.1
 pecl xdebug-3.1.5
 pecl yaml
 pecl memcached
+git zmq https://github.com/zeromq/php-zmq master
