--- a/config/extensions/8.2
+++ b/config/extensions/8.2
@@ -14,3 +14,4 @@ pecl pdo_sqlsrv
 pecl yaml
 pecl xdebug
 git memcached https://github.com/php-memcached-dev/php-memcached master --enable-memcached --enable-memcached-igbinary --enable-memcached-json --enable-memcached-msgpack
+git zmq https://github.com/zeromq/php-zmq master
