--- a/config/definitions/8.4
+++ b/config/definitions/8.4
@@ -123,7 +123,7 @@
 --with-pic
 --with-layout=GNU
 --without-pear
---with-external-pcre
+# --with-external-pcre
 --with-system-tzdata
 
 # Placeholder for thread-safe build.
