--- a/config/extensions/8.4
+++ b/config/extensions/8.4
@@ -12,6 +12,7 @@ pecl redis
 pecl sqlsrv
 pecl pdo_sqlsrv
 pecl yaml
+git imap https://github.com/php/pecl-mail-imap main --with-imap=shared,/usr --with-kerberos --with-imap-ssl=/usr
 git xdebug https://github.com/xdebug/xdebug master
 git memcached https://github.com/php-memcached-dev/php-memcached master --enable-memcached --enable-memcached-igbinary --enable-memcached-json --enable-memcached-msgpack
 git zmq https://github.com/zeromq/php-zmq master
