--- a/config/extensions/7.3
+++ b/config/extensions/7.3
@@ -8,7 +8,7 @@ pecl memcache-4.0.5.2
 pecl mongodb-1.16.2
 pecl msgpack
 pecl pcov
-pecl redis
+pecl redis-6.0.2
 pecl sqlsrv-5.10.1
 pecl pdo_sqlsrv-5.10.1
 pecl xdebug-3.1.5
