Build PHP 8.4 with external pcre [skip ci]

--- a/config/definitions/8.4
+++ b/config/definitions/8.4
@@ -115,7 +115,7 @@
 --with-pic
 --with-layout=GNU
 --without-pear
-# --with-external-pcre
+--with-external-pcre
 --with-system-tzdata
 
 # Placeholder for thread-safe build.
