--- a/config/definitions/8.5
+++ b/config/definitions/8.5
@@ -115,7 +115,7 @@
 --with-pic
 --with-layout=GNU
 --without-pear
-# --with-external-pcre
+--with-external-pcre
 --with-system-tzdata
 
 # Placeholder for thread-safe build.
