--- a/config/definitions/7.1
+++ b/config/definitions/7.1
@@ -138,6 +138,9 @@
 # Placeholder for thread-safe build.
 ZTS
 
+# Placeholder for asan build.
+ASAN
+
 # Placeholder for patch commands.
 PATCHES
 
