--- a/config/definitions/7.4
+++ b/config/definitions/7.4
@@ -136,6 +136,9 @@
 # Placeholder for thread-safe build.
 ZTS
 
+# Placeholder for asan build.
+ASAN
+
 # Placeholder for patch commands.
 PATCHES
 
