--- a/config/definitions/8.1
+++ b/config/definitions/8.1
@@ -129,6 +129,9 @@
 # Placeholder for thread-safe build.
 ZTS
 
+# Placeholder for asan build.
+ASAN
+
 # Placeholder for patch commands.
 PATCHES
 
