--- a/config/definitions/8.4
+++ b/config/definitions/8.4
@@ -122,6 +122,9 @@
 # Placeholder for thread-safe build.
 ZTS
 
+# Placeholder for asan build.
+ASAN
+
 # Placeholder for patch commands.
 PATCHES
 
