--- a/config/extensions/8.1
+++ b/config/extensions/8.1
@@ -11,7 +11,7 @@ pecl pcov
 pecl redis
 pecl sqlsrv
 pecl pdo_sqlsrv
-pecl xdebug
 pecl yaml
 git memcached https://github.com/php-memcached-dev/php-memcached master --enable-memcached --enable-memcached-igbinary --enable-memcached-json --enable-memcached-msgpack
+git xdebug https://github.com/xdebug/xdebug latest
 git zmq https://github.com/zeromq/php-zmq master
