--- a/config/extensions/8.2
+++ b/config/extensions/8.2
@@ -12,6 +12,6 @@ pecl redis
 pecl sqlsrv
 pecl pdo_sqlsrv
 pecl yaml
-pecl xdebug
 git memcached https://github.com/php-memcached-dev/php-memcached master --enable-memcached --enable-memcached-igbinary --enable-memcached-json --enable-memcached-msgpack
+git xdebug https://github.com/xdebug/xdebug latest
 git zmq https://github.com/zeromq/php-zmq master
