--- a/config/definitions/8.5
+++ b/config/definitions/8.5
@@ -121,6 +121,9 @@
 # Placeholder for thread-safe build.
 ZTS
 
+# Placeholder for ASAN build.
+ASAN
+
 # Placeholder for patch commands.
 PATCHES
 
