Improve support for redis [skip ci]

--- a/config/extensions/7.2
+++ b/config/extensions/7.2
@@ -8,7 +8,7 @@ pecl memcache-4.0.5.2
 pecl mongodb-1.16.2
 pecl msgpack
 pecl pcov
-pecl redis-6.0.2
+pecl redis-6.0.2 --enable-redis --enable-redis-igbinary --enable-redis-lz4 --enable-redis-lzf --enable-redis-msgpack --enable-redis-zstd --with-liblz4=/usr --with-libzstd=/usr
 pecl sqlsrv-5.9.0
 pecl pdo_sqlsrv-5.9.0
 pecl xdebug-3.1.5
