--- a/config/extensions/7.4
+++ b/config/extensions/7.4
@@ -8,7 +8,7 @@ pecl memcache-4.0.5.2
 pecl mongodb-1.20.1
 pecl msgpack
 pecl pcov
-pecl redis
+pecl redis --enable-redis --enable-redis-igbinary --enable-redis-lz4 --enable-redis-lzf --enable-redis-msgpack --enable-redis-zstd --with-liblz4=/usr --with-libzstd=/usr
 pecl sqlsrv-5.10.1
 pecl pdo_sqlsrv-5.10.1
 pecl xdebug-3.1.5
