--- a/config/extensions/8.1
+++ b/config/extensions/8.1
@@ -8,7 +8,7 @@ pecl memcache
 pecl mongodb
 pecl msgpack
 pecl pcov
-pecl redis
+pecl redis --enable-redis --enable-redis-igbinary --enable-redis-lz4 --enable-redis-lzf --enable-redis-msgpack --enable-redis-zstd --with-liblz4=/usr --with-libzstd=/usr
 pecl sqlsrv
 pecl pdo_sqlsrv
 pecl yaml
