--- a/config/extensions/5.6
+++ b/config/extensions/5.6
@@ -6,7 +6,7 @@ git memcache https://github.com/websupport-sk/pecl-memcache 4.0.3
 pecl mongo
 pecl mongodb-1.7.5
 pecl msgpack-0.5.7
-pecl redis-4.3.0
+pecl redis-4.3.0 --enable-redis --enable-redis-igbinary --enable-redis-lzf --enable-redis-msgpack
 pecl xdebug-2.5.5
 pecl yaml-1.3.1
 pecl memcached-2.2.0
